--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -219,6 +219,10 @@ h3#countryName {
     color: #1F1F1F;
     font-size: 30px;
 }
+h3#countryName1 {
+    color: #fffef6;
+    font-size: 30px;
+}
 
 p#countryInfo {
     color: #1F1F1F;
